Improve recovery from missing input systems

* Only initialise org_kde_kwin_fakeinput if we are on wayland.
* If we are still on wayland but org_kde_kwin_fakeinput is not available
warn and fail to init().
* Warn if there's no input system.
* Make sure we always initialise it the same way

BUG: 463325
(cherry picked from commit dd31a995c6e482bcadf98633f29c38637c3919fb)